Set color of excerpt and suppress display of H2 in .page__hero--overlay

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -46,6 +46,14 @@
     margin-top: 0;
   }
 
+  .page__hero--overlay {
+    color: #ccc;
+  }
+
+  .page__hero--overlay h2 {
+    display: none;
+  }
+
   body {
     line-height: 1.25;
   }
