Add comment for .grid__item article.archive__item

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -24,7 +24,7 @@
     margin: 0.5em 0 0;
     font-size: 1em;
   }
-  
+  /* the original height of all archive__items was 17em for both grid and list layouts. */
   .grid__item article.archive__item {
     height: 17em;
   }
