Set figure.highlight's top margin to -1.5em to snug code blocks up to the paragraph that leads into them.

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -67,6 +67,10 @@
     padding-right: 100px;
   }
 
+  figure.highlight {
+    margin: -1.5em 0 2em 0;
+  }
+
   @media (min-width: 64em){
     html {
       font-size: 18px;
