--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -71,6 +71,12 @@
     margin: -1.5em 0 2em 0;
   }
 
+  .archive__item-teaser img {
+    width: 100%;
+    max-width: 100%;
+    height: 100%
+  } 
+
   @media (min-width: 64em){
     html {
       font-size: 18px;
