Update nav.scss with background pulled directly from encrypted-data.png and text color as lighter version of text from encrypted-data.png

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -1,5 +1,5 @@
 .masthead {
-    background-color: #475bc9
+    background-color: #0a223d;
 }
 
 #site-nav {
@@ -8,7 +8,10 @@
 
 #site-nav a,
 #site-nav a:visited {
-    color: #ffffff;
+    color: #ddeeed;
+    &:hover {
+        color: white;
+      }
 }
 
 #site-nav a,
